syntax = "proto3";

package pingpong;

option go_package = "pingpong/pingpongpb";

service PingPong {
  rpc Ping (PingRequest) returns (PongResponse);
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}
